--- a/home/templates/home/eligibility_wizard_general.html
+++ b/home/templates/home/eligibility_wizard_general.html
@@ -33,7 +33,7 @@ Please have that information before starting this process.
 	<hr>
     {% endfor %}
 {% else %}
-    {% include "bootstrap_form.html" with form=wizard.form only %}
+        {% include "bootstrap_card_form.html" with form=wizard.form only %}
 {% endif %}
 {% if wizard.steps.prev %}
 <button name="wizard_goto_step" class="btn btn-secondary" type="submit" value="{{ wizard.steps.first }}">First step</button>
