--- a/home/templates/home/eligibility_wizard_school_terms.html
+++ b/home/templates/home/eligibility_wizard_school_terms.html
@@ -28,10 +28,10 @@ If less than three terms overlap with the Outreachy internship period, leave tho
 	<div class="card border-info mb-3">
 		<div class="card-header text-white bg-info">Term #{{ forloop.counter }}</div>
 	</div>
-        {% include "bootstrap_form.html" with form=form only %}
+        {% include "bootstrap_card_form.html" with form=form only %}
     {% endfor %}
 {% else %}
-    {% include "bootstrap_form.html" with form=wizard.form only %}
+    {% include "bootstrap_card_form.html" with form=wizard.form only %}
 {% endif %}
 {% if wizard.steps.prev %}
 <button name="wizard_goto_step" class="btn btn-secondary" type="submit" value="{{ wizard.steps.first }}">First step</button>
