--- a/home/templates/home/eligibility_wizard_employment_info.html
+++ b/home/templates/home/eligibility_wizard_employment_info.html
@@ -40,10 +40,10 @@ If you are a teacher who has a break between terms, enter your employment period
 	<div class="card border-info mb-3">
 		<div class="card-header text-white bg-info">Employment Period #{{ forloop.counter }}</div>
 	</div>
-        {% include "bootstrap_form.html" with form=form only %}
+        {% include "bootstrap_card_form.html" with form=form only %}
     {% endfor %}
 {% else %}
-    {% include "bootstrap_form.html" with form=wizard.form only %}
+    {% include "bootstrap_card_form.html" with form=wizard.form only %}
 {% endif %}
 {% if wizard.steps.prev %}
 <button name="wizard_goto_step" class="btn btn-secondary" type="submit" value="{{ wizard.steps.first }}">First step</button>
