--- a/home/templates/home/eligibility_wizard_noncollege_school_info.html
+++ b/home/templates/home/eligibility_wizard_noncollege_school_info.html
@@ -24,10 +24,10 @@ If your coding school doesn't have courses, fill out your time commitments in on
 	<div class="card border-info mb-3">
 		<div class="card-header text-white bg-info">Course #{{ forloop.counter }}</div>
 	</div>
-        {% include "bootstrap_form.html" with form=form only %}
+        {% include "bootstrap_card_form.html" with form=form only %}
     {% endfor %}
 {% else %}
-    {% include "bootstrap_form.html" with form=wizard.form only %}
+    {% include "bootstrap_card_form.html" with form=wizard.form only %}
 {% endif %}
 {% if wizard.steps.prev %}
 <button name="wizard_goto_step" class="btn btn-secondary" type="submit" value="{{ wizard.steps.first }}">First step</button>
