--- a/home/templates/home/snippet/project_landing_snippet.html
+++ b/home/templates/home/snippet/project_landing_snippet.html
@@ -59,7 +59,6 @@
 		{% endfor %}
 	{% endif %}
 {% endwith %}
-<p>Please contact the mentors for this internship project to get information on how you can make a contribution during the application process. Only applicants who make a contribution will be accepted as interns.</p>
 
 <h3>How do I work with the {{ community.name }} community?</h3>
 <p>Community members are there to answer your questions, give you feedback, and help you grow your skills.
@@ -106,6 +105,7 @@ The community has been accepting contributions from people from around the world
 
 <h3>Project Contribution Information</h3>
 <p>As part of the application process, all applicants must make at least one contribution to be accepted as an intern for this project.
+Only applicants who make a contribution will be eligible to be accepted as interns.
 {% if community.tutorial %}
 This community requires applicants to complete a tutorial before they can make their contributions.
 {{ community.tutorial|safe }}
@@ -116,18 +116,18 @@ This community requires applicants to complete a tutorial before they can make t
 {% if project.repository %}
 	Applicants can contribute to this project through <a href="{{ project.repository }}">the project repository or contribution page</a>.
 {% else %}
-	Applicants will need to contact project mentors to get information about the project repositories.
+	Some projects accept contributions through a project repository. This project has not provided a link to a project repository.
 {% endif %}
 {% if project.issue_tracker %}
 	The project uses an <a href="{{ project.issue_tracker }}">issue tracker</a> to keep information about bugs to fix, project features to implement, documentation to write, and more.
 	{% if project.newcomer_issue_tag %}
 		Applicants can look for newcomer-friendly issues to use for their first contributions by looking for the following issue tags in the <a href="{{ project.issue_tracker }}">project issue tracker</a>:
 		{{ project.newcomer_issue_tag }}
-	{% else %}
-		Applicants will need to contact a mentor to find out how they can make their first contributions to the project.
-	{% endif %}
 {% endif %}
 </p>
 
-{{ project.contribution_tasks|safe }}
-
+{% if not project.contribution_tasks %}
+	<p>Applicants will need to contact a mentor to find out how they can make their first contributions to the project.</p>
+{% else %}
+	{{ project.contribution_tasks|safe }}
+{% endif %}
