Fix bug in project snippet template

--- a/home/templates/home/snippet/project_landing_snippet.html
+++ b/home/templates/home/snippet/project_landing_snippet.html
@@ -123,6 +123,7 @@ This community requires applicants to complete a tutorial before they can make t
 	{% if project.newcomer_issue_tag %}
 		Applicants can look for newcomer-friendly issues to use for their first contributions by looking for the following issue tags in the <a href="{{ project.issue_tracker }}">project issue tracker</a>:
 		{{ project.newcomer_issue_tag }}
+	{% endif %}
 {% endif %}
 </p>
 
