Outreachy applicants shouldn't submit project proposals.
Thanks @robbyoconnor for the suggestion!

--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -68,6 +68,8 @@ Past community participation in Outreachy
 
 	<p>Please read the additional <a href="/mentor/mentor-faq/#define-a-project">Outreachy project requirements</a> before submitting an intern project proposal.</p>
 
+	<p><strong>Outreachy applicants should not submit project proposals through this form.</strong> You need to look over the <a href="{% url 'project-selection' %}">list of projects</a> and pick a project from that list.</p>
+
 	<p><a class='btn btn-success' href="{% url 'project-action' action='submit' community_slug=community.slug %}">Submit a Project Proposal</a></p>
 
 	{% if approved_projects %}
