Nudge applicants towards the smaller communities

--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -57,12 +57,16 @@ Outreachy Internships | Apply | Pick a Project
 		<p>
 		Only applicants that make a contribution to a project
 		will be accepted as an intern, so it's good to not pick too
-		many projects to apply to. At the same time, certain
-		communities like Mozilla, Wikimedia, and the Linux kernel are
-		highly competitive. If you choose to apply to those
-		communities, make sure to apply to another project
-		within that community or another project in a different community as well.
+		many projects to apply to.
 		We don't recommend applying to more than two projects.
+		</p>
+		<p>
+		Many people apply to communities that are accepting multiple
+		interns in order to increase their chances of getting accepted.
+		However, when all the applicants think that way, it means
+		projects that are only accepting one intern don't get a lot of
+		applicants. You should pick a project that looks interesting to
+		you, and will help you improve the skills you want to learn.
 		</p>
 		<p>
 		Many people get overwhelmed with the list of projects and don't
