--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -47,7 +47,7 @@ Then subscribe them using the following links (anyone already subscribed won't b
 		{% if not p.project_set.all %}
 				<tr>
 					<td>{% if p not in approved_participations %}{{ p.community.name }}{% else %}<a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=p.community.slug %}">{{ p.community.name }}{% endif %}</a></td>
-					<td>{% if p in approved_participations %}Approved{% else %}Pending{% endif %}</td>
+					<td>{% if p in approved_participations %}Approved{% elif p in pending_participations %}Pending{% else %}Rejected{% endif %}</td>
 					<td>No Projects</td>
 					<td> - </td>
 					<td> - </td>
