--- a/home/templates/home/snippet/coordinator_reminder_prompt.html
+++ b/home/templates/home/snippet/coordinator_reminder_prompt.html
@@ -4,13 +4,17 @@
 	<p class="card-text">
 	Below is a list of all communities you are approved to be a coordinator for,
 	where the community is also approved to participate in this round.
-	If you follow the links, you'll see a summary of the applicants for each project under that community.
+	You can find unapproved communities linked from the <a href="{% url 'community-cfp' %}">community CFP page</a>.
 	</p>
+	<p><a href="{% url 'account' %}">Edit your personal or coordinator information</a></p>
 
+	{% for c in request.user.comrade.get_approved_coordinator_communities %}
+	<h4>Coordinator actions for {{ c.name }}</h4>
 	<ul>
-	{% for community in request.user.comrade.get_approved_coordinator_communities %}
-		<li><a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=community.slug %}">{{ community.name }} applicants</a></li>
-	{% endfor %}
+		<li><a href="{% url 'community-landing' round_slug=current_round.slug slug=c.slug %}">View the community projects page applicants see</a></li>
+		<li><a href="{% url 'community-read-only' community_slug=c.slug %}">Edit the community info</a></li>
+		<li><a href="{% url 'community-applicants' round_slug=current_round.slug community_slug=c.slug %}">Review community applicants</a></li>
 	</ul>
+	{% endfor %}
     </div>
 </div>
