--- a/home/templates/home/snippet/mentor_reminder_prompt.html
+++ b/home/templates/home/snippet/mentor_reminder_prompt.html
@@ -1,5 +1,6 @@
 <div class="card border-info mb-3">
-    <div class="card-header text-white bg-info">Review Your Project's Applicants</div>
+    <div class="card-header"><a data-toggle="collapse" data-parent="mentor-action-accordion" aria-expanded="false" aria-controls="#mentor-action-accordion" href="#mentor-action-accordion">+ Mentor Actions</a></div>
+    <div class="collapse" id="mentor-action-accordion">
     <div class="card-body">
 	<p class="card-text">
 	Below is a list of all approved projects you are approved to be a mentor for.
@@ -31,5 +32,6 @@
 	{% endfor %}
 	</ul>
 	You can also see the <a href="{% url 'community-cfp' %}">list of other communities</a> you can submit a project for.
+    </div>
     </div>
 </div>
