Make mentor and coordinator collapses more visible

--- a/home/templates/home/snippet/coordinator_reminder_prompt.html
+++ b/home/templates/home/snippet/coordinator_reminder_prompt.html
@@ -1,5 +1,5 @@
 <div class="card border-info mb-3">
-    <div class="card-header"><a data-toggle="collapse" data-parent="coordinator-action-accordion" aria-expanded="false" aria-controls="#coordinator-action-accordion" href="#coordinator-action-accordion">+ Coordinator Actions</a></div>
+    <div class="card-header bg-warning"><a data-toggle="collapse" data-parent="coordinator-action-accordion" aria-expanded="false" aria-controls="#coordinator-action-accordion" href="#coordinator-action-accordion">+ Coordinator Actions</a></div>
     <div class="collapse" id="coordinator-action-accordion">
     <div class="card-body">
 	<p class="card-text">
