--- a/home/templates/home/snippet/mentor_reminder_prompt.html
+++ b/home/templates/home/snippet/mentor_reminder_prompt.html
@@ -1,5 +1,5 @@
 <div class="card border-info mb-3">
-	<div class="card-header"><a data-toggle="collapse" data-parent="mentor-action-accordion" {% if show_reminders == 1 %}aria-expanded="true"{% else %}aria-expanded="false"{% endif %} aria-controls="#mentor-action-accordion" href="#mentor-action-accordion">+ Mentor Actions</a></div>
+	<div class="card-header bg-warning"><a data-toggle="collapse" data-parent="mentor-action-accordion" {% if show_reminders == 1 %}aria-expanded="true"{% else %}aria-expanded="false"{% endif %} aria-controls="#mentor-action-accordion" href="#mentor-action-accordion">+ Mentor Actions</a></div>
 	<div class="collapse{% if show_reminders == 1 %} show{% endif %}" id="mentor-action-accordion">
     <div class="card-body">
 	<p class="card-text">
