Make dashboard button more visible
Also, only show the actions numbers if someone has an action they need
to take. That way applicants won't always have '0' notifications.

--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -153,7 +153,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'dashboard' %}">
-				    Notifications <span class="badge badge-light">{{ pending_approvals }}</span>
+				    <span class="badge badge-light">Dashboard {% if pending_approvals %}({{ pending_approvals }} actions needed){% endif %}</span>
 			    </a>
                         </li>
                         {% for headerp in header_pages %}
