Fix bug in number of actions displayed

--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -8,7 +8,7 @@ Dashboard
 {% block content %}
 
 {% if groups %}
-<p>You have {{ groups|length }} action{{ groups|pluralize }} you need to take. <a href="#actions">See all actions.</a></p>
+<p>You have actions you need to take. <a href="#actions">See all actions.</a></p>
 {% endif %}
 
 {% include "home/snippet/eligibility_prompts.html" %}
